added favorite functionality

--- a/src/app/container/product-details/product-details.component.html
+++ b/src/app/container/product-details/product-details.component.html
@@ -1,14 +1,17 @@
 <div class="product-details" *ngIf="product">
     <h1>{{ product.title }}</h1>
     <div class="product-details-container">
-        <div class="product-details-image-price">
-            <img [src]="product.image" alt="{{ product.title }}" class="product-details-image">
+        <img [src]="product.image" alt="{{ product.title }}" class="product-details-image">
+        <div class="text-price">
             <div class="product-price">
                 {{ product.price }}$
             </div>
-        </div>
-        <div class="product-details-text">
-            <p><strong>Description:</strong> {{ product.description }}</p>
+            <div class="product-details-text">
+                <p><strong>Description:</strong> {{ product.description }}</p>
+            </div>
+            <button (click)="toggleFavorite()">
+                {{ isFavorite() ? 'Remove from Favorites' : 'Add to Favorites' }}
+            </button>
         </div>
     </div>
 </div>
