--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,14 @@
 <div class="ekart--header">
-    <div class="ekart-logo">
-        eKart
+    <div class="ekart">
+
+        <div class="ekart-logo">
+            eKart
+        </div>
+        <div class="ekart-top">
+            <top-menu></top-menu>
+        </div>
     </div>
     <div class="ekart--header--nav">
-        <top-menu></top-menu>
         <div class="ekart--bottom-bar">
             <main-menu></main-menu>
         </div>
