--- a/src/app/pages/exchange-return/exchange-return.component.css
+++ b/src/app/pages/exchange-return/exchange-return.component.css
@@ -42,7 +42,7 @@
     }
   
     .policy-notes {
-      text-align: center;
+      text-align: left;
       font-size: 16px;
       color: #999;
   
