--- a/src/app/pages/exchange-return/exchange-return.component.html
+++ b/src/app/pages/exchange-return/exchange-return.component.html
@@ -34,7 +34,7 @@
     </section>
 
     <section class="policy-notes">
-        <p><strong>Note:</strong> Sale items cannot be exchanged or returned. Shipping fees are non-refundable. For more
+        <p><strong>Note:</strong> Shipping fees are non-refundable. For more
             information, please contact our support team.</p>
     </section>
 </div>
