--- a/src/app/container/product-details/product-details.component.css
+++ b/src/app/container/product-details/product-details.component.css
@@ -10,6 +10,13 @@
 }
 
 .product-details-container {
+    display: grid;                          
+    grid-template-columns: 1fr;            
+    grid-auto-rows: auto;                  
+    justify-items: start;                   
+    align-items: start; 
+    gap: 10px;
+    margin-bottom: 20px;
     max-width: 900px;
     margin: 10px 0px;
     padding: 20px;
@@ -18,27 +25,18 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.product-details-image-price {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 10px;
-    margin-bottom: 20px;
-}
-
 .product-details-image {
-    max-width: 40%;
+    max-width: 50%;
 }
 
 .product-price {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: auto;
-    margin-top: 5px;
-    padding: 10px 15px;
-    background-color: #28282B;
+    width: 8vh;
+    margin: 5px;
+    padding: 10px 35px;
+    background-color: black;
     color: white;
     border-radius: 10px;
 }
@@ -48,5 +46,120 @@
 }
 
 .product-details-text p {
-    padding: 8px;
+    padding: 10px;
+    line-height: 1.3;
+}
+
+button {
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin: 2vh 1vh;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+button:hover {
+    background-color: black;
+    color: white;
+}
+
+@media (min-width: 700px) {
+    .product-details-container {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
+    .product-details-image {
+        max-width: 100%;
+    }
+    .product-price {
+        margin: 5vh 3vh 1vh;
+        padding: 10px 35px; 
+    }
+    .product-details-text p {
+        line-height: 1.5;
+        margin: 10px;
+    }
+    button {
+        margin: 1vh 3vh;
+    }
+}
+
+@media (min-width: 900px) {
+    .product-details-container {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        max-width: 100%;
+    }
+    .product-details-image {
+        max-width: 100%;
+    }
+    .product-price {
+        margin: 5vh 3vh 1vh; 
+        padding: 10px 35px;
+    }
+    .product-details-text p {
+        line-height: 1.5;
+        margin: 10px;
+        font-size: 17px;
+    }
+    button {
+        margin: 1vh 3vh;
+    }
+}
+@media (min-width: 1105px) {
+    .product-details h1 {
+        font-size: 25px;
+    }
+    .product-details-container {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        max-width: 100%;
+    }
+    .product-details-image {
+        max-width: 80%;
+    }
+    .product-price {
+        margin: 5vh 3vh 1vh; 
+        padding: 15px 35px;
+    }
+    .product-details-text p {
+        line-height: 1.5;
+        margin: 10px;
+        font-size: 18px;
+    }
+    button {
+        margin: 3vh 2vh;
+        padding: 15px 20px;
+    }
+}
+@media (min-width: 1300px) {
+    .product-details h1 {
+        font-size: 30px;
+        margin-bottom: 6vh;
+    }
+    .product-details-container {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        max-width: 100%;
+    }
+    .product-details-image {
+        max-width: 70%;
+        margin-left: 10vh;
+    }
+    .product-price {
+        margin: 5vh 1vh 0vh; 
+        padding: 15px 40px;
+    }
+    .product-details-text p {
+        line-height: 1.5;
+        margin: 4vh 30vh 0px 0px;
+        font-size: 18px;
+    }
+    button {
+        margin: 4vh 1.5vh;
+        padding: 15px 20px;
+    }
+    
 }
