--- a/src/app/container/product-list/product-list.component.css
+++ b/src/app/container/product-list/product-list.component.css
@@ -2,7 +2,7 @@
 .ekart--products--sort {
     display: flex;
     align-items: center;
-    margin: 5vh 15vh;
+    margin: 5vh 20vh;
   }
 
   .ekart--products--sort label {
@@ -13,7 +13,7 @@
   }
   
   .ekart--products--sort select {
-    padding: 8px;
+    padding: 7px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -42,4 +42,10 @@
     display: flex;
     flex-wrap: wrap;
     padding: 0px 17vh;
+}
+
+@media (max-width: 800px) {
+  .ekart--products--sort {
+    margin: 5vh 10vh;
+  }
 }
