--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,22 +1,41 @@
 .ekart--header {
     width: 100%;
-    height: 13vh;
+    height: 15vh;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     border-bottom: #e5e4e2 1.5px solid;
 }
+
+.ekart {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    width: 100%;
+    padding: 0 2vh;
+}
+
 .ekart-logo {
-    padding: 1.2vh 8vh;
     font-size: 40px;
     font-weight: bold;
     font-family: 'Concert One', cursive;
-    width: 20%;
 }
-.ekart--header--nav {
-    padding: 1vh 2vh;
+
+.ekart-top {
     font-size: 12px;
-    width: 80%;
+    align-self: center;
 }
+
+.ekart--header--nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1vh 0;
+    font-size: 12px;
+    width: 100%; 
+}
+
 .ekart--bottom-bar {
     display: flex;
+    justify-content: center;
+    width: 100%;
 }
